--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,29 +1,41 @@
 [versions]
-spring-boot = "3.1.0"
 spotless = "6.19.0"
 jacoco = "0.8.10"
-cucumber = "6.8.1"
 mockito = "5.3.1"
 junit = "5.9.1"
-assertj= "3.24.2"
+assertj = "3.24.2"
+spek = "2.0.19"
+hsqldb = "2.7.2"
+ksp-plugin = "1.9.10-1.0.13"
+koin = "3.4.3"
+kotlin = "1.9.10"
+ksp="1.2.2"
+ktlint="0.48.2"
+logback="1.4.11"
+snakeyaml = "2.2"
 
 [plugins]
-spring-boot = { id = "org.springframework.boot", version.ref = "spring-boot" }
 spotless = { id = "com.diffplug.spotless", version.ref = "spotless" }
+ksp = { id = "com.google.devtools.ksp", version.ref = "ksp-plugin" }
 
 [libraries]
-cucumber-spring = { group = "io.cucumber", name = "cucumber-spring", version.ref = "cucumber" }
-cucumber-java = { group = "io.cucumber", name = "cucumber-java", version.ref = "cucumber" }
-cucumber-junit = { group = "io.cucumber", name = "cucumber-junit", version.ref = "cucumber" }
-spring-boot-starter-test = { group = "org.springframework.boot", name = "spring-boot-starter-test", version.ref = "spring-boot" }
-spring-boot-starter = { group = "org.springframework.boot", name = "spring-boot-starter" }
+snakeyaml = {group = "org.yaml", name="snakeyaml", version.ref="snakeyaml"}
+logback-classic = {group = "ch.qos.logback", name ="logback-classic", version.ref="logback"}
+spek-jvm = { group = "org.spekframework.spek2", name = "spek-dsl-jvm", version.ref = "spek" }
+spek-junit5 = { group = "org.spekframework.spek2", name = "spek-runner-junit5", version.ref = "spek" }
 mockito-bom = { group = "org.mockito", name = "mockito-bom", version.ref = "mockito" }
 junit-bom = { group = "org.junit", name = "junit-bom", version.ref = "junit" }
-junit-jupiter = { group = "org.junit.jupiter", name="junit-jupiter"}
-junit-mockito = { group = "org.mockito", name="mockito-junit-jupiter"}
-junit-vintage = { group = "org.junit.vintage", name="junit-vintage-engine"}
-assertj = { group = "org.assertj", name="assertj-core", version.ref="assertj"}
+junit-jupiter = { group = "org.junit.jupiter", name = "junit-jupiter" }
+junit-mockito = { group = "org.mockito", name = "mockito-junit-jupiter", version.ref = "mockito" }
+junit-vintage = { group = "org.junit.vintage", name = "junit-vintage-engine" }
+assertj = { group = "org.assertj", name = "assertj-core", version.ref = "assertj" }
+hsqldb = { group = "org.hsqldb", name = "hsqldb", version.ref = "hsqldb" }
+koin-core = { group = "io.insert-koin", name = "koin-core", version.ref = "koin" }
+koin-annotations = { group = "io.insert-koin", name = "koin-annotations", version.ref = "ksp" }
+koin-slf4j = { group = "io.insert-koin", name = "koin-logger-slf4j", version.ref = "koin" }
+koin-compiler = { group = "io.insert-koin", name = "koin-ksp-compiler", version.ref = "ksp" }
 
 [bundles]
-cucumber = ["cucumber-spring", "cucumber-java", "cucumber-junit"]
 junit5 = ["junit-jupiter", "junit-mockito"]
+spek = ["spek-jvm", "spek-junit5"]
+koin = ["koin-core", "koin-annotations","koin-slf4j"]
