--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -44,4 +44,4 @@ jobs:
       - name: Build SQLSERVER
         uses: gradle/gradle-build-action@v2.9.0
         with:
-          arguments: :sqlserver:build
+          arguments: :sqlserver:build --scan
