#25 use single Gradle build task

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -41,11 +41,7 @@ jobs:
         with:
           java-version: '20'
           distribution: 'temurin'
-      - name: Build HSQLDB
+      - name: Run build
         uses: gradle/gradle-build-action@v2.9.0
         with:
-          arguments: :hsqldb:build
-      - name: Build SQLSERVER
-        uses: gradle/gradle-build-action@v2.9.0
-        with:
-          arguments: :sqlserver:build --scan
+          arguments: build --scan
