--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -15,7 +15,7 @@ on:
 
 permissions:
   contents: read
-
+  pull-requests: write
 jobs:
   build:
 
@@ -45,3 +45,13 @@ jobs:
         uses: gradle/gradle-build-action@v2.9.0
         with:
           arguments: build --scan
+      - name: Add coverage to PR
+        id: jacoco
+        uses: madrapps/jacoco-report@v1.6.1
+        with:
+          paths: |
+            ${{ github.workspace }}/**/build/reports/jacoco/integrationTestCodeCoverageReport/integrationTestCodeCoverageReport.xml,
+          token: ${{ secrets.GITHUB_TOKEN }}
+          min-coverage-overall: 80
+          title: Code Coverage
+          update-comment: true
