--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -15,7 +15,7 @@ on:
 
 permissions:
   contents: read
-
+  pull-requests: write
 jobs:
   build:
 
@@ -41,11 +41,17 @@ jobs:
         with:
           java-version: '20'
           distribution: 'temurin'
-      - name: Build HSQLDB
+      - name: Run build
         uses: gradle/gradle-build-action@v2.9.0
         with:
-          arguments: :hsqldb:build
-      - name: Build SQLSERVER
-        uses: gradle/gradle-build-action@v2.9.0
+          arguments: build --scan
+      - name: Add coverage to PR
+        id: jacoco
+        uses: madrapps/jacoco-report@v1.6.1
         with:
-          arguments: :sqlserver:build --scan
+          paths: |
+            ${{ github.workspace }}/**/build/reports/jacoco/integrationTestCodeCoverageReport/integrationTestCodeCoverageReport.xml,
+          token: ${{ secrets.GITHUB_TOKEN }}
+          min-coverage-overall: 80
+          title: Code Coverage
+          update-comment: true
