--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,6 @@ jobs:
       - name: Publish package
         uses: gradle/gradle-build-action@v2.9.0
         with:
-          arguments: publish --info -Pversion="${{ github.ref_name }}"
+          arguments: publish --info -Pversion=${{ github.ref_name }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
