#47 Upgrade Gradle and KSP

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,5 @@
-verGradle=8.3
+verGradle=8.4
+org.gradle.jvmargs=-Xmx1024m
 unitTestCoverageLimit=100
 integrationTestCoverageLimit=93
 allowAllTargetConfiguration=false
