#24 add postgres support

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -34,6 +34,17 @@ jobs:
         env:
           ACCEPT_EULA: 'Y'
           MSSQL_SA_PASSWORD: 'Th1sIsW0rking'
+      kontrol-db-postgres:
+        image: postgres:latest
+        volumes:
+          - /home/runner/work:/var/outputdir
+        options: >-
+          --name kontrol-db-postgres
+        ports:
+          - 5432:5432
+        env:
+          POSTGRES_USER: 'SA'
+          POSTGRES_PASSWORD: 'Th1sIsW0rking'
     steps:
       - uses: actions/checkout@v4
       - name: Set up JDK 20
