--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-dokka ="1.9.10"
+dokka = "1.9.10"
 spotless = "6.25.0"
 jacoco = "0.8.10"
 mockito = "5.12.0"
@@ -16,6 +16,7 @@ logback = "1.5.6"
 asciidoc-plugin = "4.0.2"
 sqlserver = "12.7.0.jre11-preview"
 docker-plugin = "9.3.7"
+oracle = "23.4.0.24.05"
 postgres = "42.7.3"
 
 [plugins]
@@ -23,17 +24,17 @@ spotless = { id = "com.diffplug.spotless", version.ref = "spotless" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp-plugin" }
 asciidoc = { id = "org.asciidoctor.jvm.convert", version.ref = "asciidoc-plugin" }
 docker = { id = "com.bmuschko.docker-remote-api", version.ref = "docker-plugin" }
-dokka = {id ="org.jetbrains.dokka", version.ref="dokka"}
+dokka = { id = "org.jetbrains.dokka", version.ref = "dokka" }
 
 [libraries]
-docker-remote-plugin = {group="com.bmuschko.docker-remote-api", name="com.bmuschko.docker-remote-api.gradle.plugin",version.ref = "docker-plugin"}
+docker-remote-plugin = { group = "com.bmuschko.docker-remote-api", name = "com.bmuschko.docker-remote-api.gradle.plugin", version.ref = "docker-plugin" }
 logback-classic = { group = "ch.qos.logback", name = "logback-classic", version.ref = "logback" }
 mockito-bom = { group = "org.mockito", name = "mockito-bom", version.ref = "mockito" }
 junit-bom = { group = "org.junit", name = "junit-bom", version.ref = "junit" }
-junit-jupiter = { group = "org.junit.jupiter", name = "junit-jupiter", version.ref = "junit"  }
-junit-jupiter-api = { group = "org.junit.jupiter", name = "junit-jupiter-api" , version.ref = "junit" }
+junit-jupiter = { group = "org.junit.jupiter", name = "junit-jupiter", version.ref = "junit" }
+junit-jupiter-api = { group = "org.junit.jupiter", name = "junit-jupiter-api", version.ref = "junit" }
 junit-mockito = { group = "org.mockito", name = "mockito-junit-jupiter", version.ref = "mockito" }
-junit-vintage = { group = "org.junit.vintage", name = "junit-vintage-engine", version.ref = "junit"  }
+junit-vintage = { group = "org.junit.vintage", name = "junit-vintage-engine", version.ref = "junit" }
 assertj = { group = "org.assertj", name = "assertj-core", version.ref = "assertj" }
 hsqldb = { group = "org.hsqldb", name = "hsqldb", version.ref = "hsqldb" }
 hsqldb-tool = { group = "org.hsqldb", name = "sqltool", version.ref = "hsqldb" }
@@ -46,10 +47,11 @@ koin-compiler = { group = "io.insert-koin", name = "koin-ksp-compiler", version.
 kotlin-reflect = { group = "org.jetbrains.kotlin", name = "kotlin-reflect", version.ref = "kotlin" }
 kotlin-jvm-plugin = { group = "org.jetbrains.kotlin.jvm", name = "org.jetbrains.kotlin.jvm.gradle.plugin", version.ref = "kotlin" }
 ksp-plugin = { group = "com.google.devtools.ksp", name = "com.google.devtools.ksp.gradle.plugin", version.ref = "ksp-plugin" }
+oracle = { group = "com.oracle.database.jdbc", name = "ojdbc11", version.ref = "oracle" }
 postgres = { group = "org.postgresql", name = "postgresql", version.ref = "postgres" }
 sqlserver = { group = "com.microsoft.sqlserver", name = "mssql-jdbc", version.ref = "sqlserver" }
 
 [bundles]
-junit5 = ["junit-jupiter", "junit-mockito","junit-jupiter-api"]
+junit5 = ["junit-jupiter", "junit-mockito", "junit-jupiter-api"]
 jackson-yaml = ["jackson-kotlin", "jackson-yaml"]
 koin = ["koin-core", "koin-annotations", "koin-slf4j"]
