--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,4 @@
-verGradle=8.7
-org.gradle.jvmargs=-Xmx1024m
+org.gradle.jvmargs=-Xmx2g -XX:+HeapDumpOnOutOfMemoryError
 unitTestCoverageLimit=100
 integrationTestCoverageLimit=93
 allowAllTargetConfiguration=false
