--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,7 +2,6 @@
 dokka = "1.9.20"
 gradle = "8.9"
 spotless = "6.25.0"
-mockito = "5.12.0"
 junit = "5.10.3"
 assertj = "3.26.3"
 hsqldb = "2.7.3"
@@ -27,11 +26,9 @@ dokka = { id = "org.jetbrains.dokka", version.ref = "dokka" }
 [libraries]
 docker-remote-plugin = { group = "com.bmuschko.docker-remote-api", name = "com.bmuschko.docker-remote-api.gradle.plugin", version.ref = "docker-plugin" }
 logback-classic = { group = "ch.qos.logback", name = "logback-classic", version.ref = "logback" }
-mockito-bom = { group = "org.mockito", name = "mockito-bom", version.ref = "mockito" }
 junit-bom = { group = "org.junit", name = "junit-bom", version.ref = "junit" }
 junit-jupiter = { group = "org.junit.jupiter", name = "junit-jupiter", version.ref = "junit" }
 junit-jupiter-api = { group = "org.junit.jupiter", name = "junit-jupiter-api", version.ref = "junit" }
-junit-mockito = { group = "org.mockito", name = "mockito-junit-jupiter", version.ref = "mockito" }
 junit-vintage = { group = "org.junit.vintage", name = "junit-vintage-engine", version.ref = "junit" }
 assertj = { group = "org.assertj", name = "assertj-core", version.ref = "assertj" }
 hsqldb = { group = "org.hsqldb", name = "hsqldb", version.ref = "hsqldb" }
@@ -50,6 +47,6 @@ postgres = { group = "org.postgresql", name = "postgresql", version.ref = "postg
 sqlserver = { group = "com.microsoft.sqlserver", name = "mssql-jdbc", version.ref = "sqlserver" }
 
 [bundles]
-junit5 = ["junit-jupiter", "junit-mockito", "junit-jupiter-api"]
+junit5 = ["junit-jupiter", "junit-jupiter-api"]
 jackson-yaml = ["jackson-kotlin", "jackson-yaml"]
 koin = ["koin-core", "koin-annotations", "koin-slf4j"]
