--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -64,6 +64,10 @@ jobs:
           distribution: 'temurin'
       - name: Run build
         uses: gradle/actions/setup-gradle@v3.5.0
+        with:
+          build-scan-publish: true
+          build-scan-terms-of-use-url: "https://gradle.com/terms-of-service"
+          build-scan-terms-of-use-agree: "yes"
       - name: Build the project
         run: ./gradlew build --scan
       - name: Add coverage to PR
