--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,21 +1,22 @@
 [versions]
+assertj = "3.26.3"
+docker-plugin = "9.3.7"
 dokka = "1.9.20"
 gradle = "8.9"
-spotless = "6.25.0"
-junit = "5.10.3"
-assertj = "3.26.3"
 hsqldb = "2.7.3"
 jackson = "2.17.2"
-ksp-plugin = "2.0.0-1.0.23"
-koin = "3.5.6"
+java = "17"
+junit = "5.10.3"
 kotlin = "2.0.0"
+ksp-plugin = "2.0.0-1.0.23"
+sqlserver = "12.7.1.jre11-preview"
+koin = "3.5.6"
 koin-compiler = "1.3.1"
 ktlint = "0.48.2"
 logback = "1.5.6"
-sqlserver = "12.7.1.jre11-preview"
-docker-plugin = "9.3.7"
 oracle = "23.4.0.24.05"
 postgres = "42.7.3"
+spotless = "6.25.0"
 
 [plugins]
 spotless = { id = "com.diffplug.spotless", version.ref = "spotless" }
