--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,6 +5,7 @@ dokka = "1.9.20"
 gradle = "8.9"
 hsqldb = "2.7.3"
 jackson = "2.17.2"
+jacoco = "0.8.12"
 java = "17"
 junit = "5.10.3"
 kotlin = "2.0.0"
