--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,5 @@
 org.gradle.jvmargs=-Xmx2g -XX:+HeapDumpOnOutOfMemoryError
+org.gradle.configureondemand=true
 unitTestCoverageLimit=100
 integrationTestCoverageLimit=93
 allowAllTargetConfiguration=false
