rename columns and tables #195

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 org.gradle.jvmargs=-Xmx2g -XX:+HeapDumpOnOutOfMemoryError
 org.gradle.configureondemand=true
-unitTestCoverageLimit=100
+org.gradle.caching=true
 integrationTestCoverageLimit=93
 allowAllTargetConfiguration=false
 version=local-SNAPSHOT
